--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,10 @@
 {% extends "layout.html" %}
 
+{% set active_page = "contact" %}
 {% block saturs %}
+
   <h1>This is contact page</h1>
   <p>Call me: {{ phone }}</p>
+
 {% endblock %}
 
