--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
       <div class="container">
         <nav>
           <ul class="menu">
-            <li {% if active_page == 'home' %}
+            <li {% if active_page == "home" %}
                   class= "active"
                 {% endif %} >
                  <a href="/home">Home</a>  
@@ -24,9 +24,17 @@
                   class = "active"
                 {% endif %} >
                 <a href="/contact">Contact</a>
-            </li>  
+            </li>
+            
+            <li {% if active_page == "chats" %}
+                  class = "active"
+                {% endif %} >
+                <a href="/chat">Chat</a>
+            </li>
+               
           </ul>
         </nav>
+        </div>
       </div>
     </header>
     <div class="container">
